[package]
name = "agentkit-deep-research"
version.workspace = true
edition = "2024"
description = "AgentKit 深度研究示例 - 自动调用工具完成研究并生成报告"
publish = false

[dependencies]
agentkit = { path = "../../agentkit", features = ["skills"] }
agentkit-core = { path = "../../agentkit-core" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
async-trait = "0.1"
chrono = "0.4"
dotenv = "0.15"

# 配置管理
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
dialoguer = "0.11"
console = "0.15"
