[package]
name = "agentkit-examples-complete"
version = "0.1.0"
edition = "2021"
description = "AgentKit 全部使用功能示例 - 展示所有核心功能的完整示例"
publish = false

[dependencies]
agentkit = { path = "../../agentkit" }
agentkit-core = { path = "../../agentkit-core" }
agentkit-runtime = { path = "../../agentkit-runtime" }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
async-trait = "0.1"
