[package]
name = "agentkit-examples-deep-dive"
version.workspace = true
edition = "2021"
description = "AgentKit 深入研究示例 - 深入展示特定功能的高级用法"
publish = false

[dependencies]
agentkit = { path = "../../agentkit", features = ["runtime"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
futures-util = "0.3"
async-stream = "0.3"
async-trait = "0.1"
